--- a/src/views/makeSchedule.pug
+++ b/src/views/makeSchedule.pug
@@ -3,24 +3,46 @@ block nav
 	script(type='text/javascript', src='public/js/loadingoverlay.min.js')
 	script.
 		if(location.hostname !== "localhost" && location.hostname !== "127.0.0.1"){
-			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-					(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-				m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+			(function (i, s, o, g, r, a, m){
+				i['GoogleAnalyticsObject'] = r;
+				i[r] = i[r] || function (){
+						(i[r].q = i[r].q || []).push(arguments)
+					}, i[r].l = 1 * new Date();
+				a = s.createElement(o),
+					m = s.getElementsByTagName(o)[0];
+				a.async = 1;
+				a.src = g;
+				m.parentNode.insertBefore(a, m)
+			})(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 			ga('create', 'UA-4436865-11', 'auto');
 			ga('send', 'pageview');
-			ga(function(tracker){
+			ga(function (tracker){
 				var uid = tracker.get('clientId');
 				$.ajax({
 					url: 'submitAnalytics.php',
 					type: 'POST',
-					data:{"i":getParameterByName("i"), "userID":uid},
-					success: function(data){console.log(data);},
-					error: function(e){console.log(e);}
+					data: {"i": getParameterByName("i"), "userID": uid},
+					success: function (data){
+						console.log(data);
+					},
+					error: function (e){
+						console.log(e);
+					}
 				});
 			});
-			(function(){
-				var t,i,e,n=window,o=document,a=arguments,s="script",r=["config","track","identify","visit","push","call","trackForm","trackClick"],c=function(){var t,i=this;for(i._e=[],t=0;r.length>t;t++)(function(t){i[t]=function(){return i._e.push([t].concat(Array.prototype.slice.call(arguments,0))),i}})(r[t])};for(n._w=n._w||{},t=0;a.length>t;t++)n._w[a[t]]=n[a[t]]=n[a[t]]||new c;i=o.createElement(s),i.async=1,i.src="//static.woopra.com/js/w.js",e=o.getElementsByTagName(s)[0],e.parentNode.insertBefore(i,e)
+			(function (){
+				var t, i, e, n = window, o = document, a = arguments, s = "script",
+					r = ["config", "track", "identify", "visit", "push", "call", "trackForm", "trackClick"],
+					c = function (){
+						var t, i = this;
+						for(i._e = [], t = 0; r.length > t; t++)(function (t){
+							i[t] = function (){
+								return i._e.push([t].concat(Array.prototype.slice.call(arguments, 0))), i
+							}
+						})(r[t])
+					};
+				for(n._w = n._w || {}, t = 0; a.length > t; t++)n._w[a[t]] = n[a[t]] = n[a[t]] || new c;
+				i = o.createElement(s), i.async = 1, i.src = "//static.woopra.com/js/w.js", e = o.getElementsByTagName(s)[0], e.parentNode.insertBefore(i, e)
 			})("woopra");
 			woopra.config({
 				domain: 'mikedombrowski.com'
@@ -28,20 +50,23 @@ block nav
 			woopra.track();
 		}
 	style.
-		td{
+		td {
 			color: #000000;
 		}
+
 		.navbar-brand-name > img {
-			max-height:70px;
-			width:auto;
+			max-height: 70px;
+			width: auto;
 			padding: 0 15px 0 0;
 		}
+
 		.navbar {
 			min-height: 90px;
 			background-color: #4788c6;
 		}
-		.navbar-collapse.in{
-			margin-top:20px;
+
+		.navbar-collapse.in {
+			margin-top: 20px;
 		}
 	nav.navbar.navbar-default.navbar-inverse
 		div.container-fluid
@@ -66,49 +91,49 @@ block nav
 							button.btn-listview.btn.glyphicon.glyphicon-list.btn-default(type='button') &nbsp;List View
 block content
 	script.
-		$(document).ready(function(){
+		$(document).ready(function (){
 			$('[data-toggle="popover"]').popover();
 		});
-		$(document).on("click", ".btn-expand", function (e) {
-			$('.collapse:not(.in)').each(function (index) {
+		$(document).on("click", ".btn-expand", function (e){
+			$('.collapse:not(.in)').each(function (index){
 				$(this).addClass("in");
 			});
 			$(this).text(' Collapse All Schedules');
 			$(this).removeClass("glyphicon-collapse-down btn-expand");
 			$(this).addClass("glyphicon-collapse-up btn-collapse");
 		});
-		$(document).on("click", ".btn-collapse", function (e) {
-			$('.collapse:not(.in)').each(function (index) {
+		$(document).on("click", ".btn-collapse", function (e){
+			$('.collapse:not(.in)').each(function (index){
 				$(this).collapse("toggle");
 			});
-			$('.collapse.in').each(function (index) {
+			$('.collapse.in').each(function (index){
 				$(this).removeClass("in");
 			});
 			$(this).text(' Expand All Schedules');
 			$(this).addClass("glyphicon-collapse-down btn-expand");
 			$(this).removeClass("glyphicon-collapse-up btn-collapse");
 		});
-		$(document).on("click", ".btn-calview", function (e) {
+		$(document).on("click", ".btn-calview", function (e){
 			$(this).text(' List View');
 			$(this).addClass("glyphicon-list btn-listview");
 			$(this).removeClass("glyphicon-calendar btn-calview");
 			$('#list-view').addClass("hide");
 			$('#calendar-view').removeClass("hide");
 		});
-		$(document).on("click", ".btn-listview", function (e) {
+		$(document).on("click", ".btn-listview", function (e){
 			$(this).text(' Calendar View');
 			$(this).removeClass("glyphicon-list btn-listview");
 			$(this).addClass("glyphicon-calendar btn-calview");
 			$('#list-view').removeClass("hide");
 			$('#calendar-view').addClass("hide");
 		});
-		function getParameterByName(name, url) {
-			if (!url) url = window.location.href;
+		function getParameterByName(name, url){
+			if(!url) url = window.location.href;
 			name = name.replace(/[\\[\]]/g, "\\$&");
 			var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
 				results = regex.exec(url);
-			if (!results) return null;
-			if (!results[2]) return '';
+			if(!results) return null;
+			if(!results[2]) return '';
 			return results[2].replace(/\\+/g, " ");
 		}
 	#results.container-fluid(style='min-height:200px;')
@@ -123,62 +148,65 @@ block content
 			"Checking Gravitational Constant in Your Locale"];
 		var random = [
 			["Recalibrating", "Excavating", "Acquiring", "Extracting", "Computing", "Deflummoxing", "Binding",
-				"Serving","Routing","Distributing","Sampling","Servicing","Repairing","Discombobulating",
+				"Serving", "Routing", "Distributing", "Sampling", "Servicing", "Repairing", "Discombobulating",
 				"Processing", "Preprocessing"],
-			["Flux", "Data", "Spline", "Storage", "Plasma", "Cache", "Laser","Extra Large","Ethernet","WiFi",
-				"Wireless","Sample", "Computational", "Local", "Integral"],
+			["Flux", "Data", "Spline", "Storage", "Plasma", "Cache", "Laser", "Extra Large", "Ethernet", "WiFi",
+				"Wireless", "Sample", "Computational", "Local", "Integral"],
 			["Capacitor", "Conductor", "Assembler", "Detector", "Post-processor", "Integrator", "Computer", "Disk",
-				"Server","Router","Calculator"]
+				"Server", "Router", "Calculator"]
 		];
 		var customElement = $("<img src='#{subdir}/loading-spinner.gif'></img><h3>", {
-			id : "countdown",
-			text : ""
+			id: "countdown",
+			text: ""
 		});
 		function makeFunnyWord(){
-			var verb = random[0][Math.floor(Math.random()*random[0].length)];
-			var adjective = random[1][Math.floor(Math.random()*random[1].length)];
-			var noun = random[2][Math.floor(Math.random()*random[2].length)];
-			return verb+" "+adjective+" "+noun;
+			var verb = random[0][Math.floor(Math.random() * random[0].length)];
+			var adjective = random[1][Math.floor(Math.random() * random[1].length)];
+			var noun = random[2][Math.floor(Math.random() * random[2].length)];
+			return verb + " " + adjective + " " + noun;
 		}
-		var interval = setInterval(function(){
+		var interval = setInterval(function (){
 			count--;
-			if(count > 10 && count%5 === 4 && ptr < sensible.length){
+			if(count > 10 && count % 5 === 4 && ptr < sensible.length){
 				writer = sensible[ptr++];
 				customElement.text(writer);
 			}
-			else if(count > 10 && count%5 === 4 && ptr >= sensible.length){
-				writer = makeFunnyWord();
-				customElement.text(writer);
-			}
-			else if(count <= 10 && count > 0){
-				writer = "Maximum Execution Time Almost Complete "+count+" Seconds Remain";
-				customElement.text(writer);
-			}
-			else if (count <= 0) {
-				clearInterval(interval);
-			}
+			else
+				if(count > 10 && count % 5 === 4 && ptr >= sensible.length){
+					writer = makeFunnyWord();
+					customElement.text(writer);
+				}
+				else
+					if(count <= 10 && count > 0){
+						writer = "Maximum Execution Time Almost Complete " + count + " Seconds Remain";
+						customElement.text(writer);
+					}
+					else
+						if(count <= 0){
+							clearInterval(interval);
+						}
 		}, 1000);
 
 		customElement.text(sensible[0]);
 		$("#results").LoadingOverlay("show", {
-			minSize:"200px",
-			size:"100%",
-			custom:customElement,
-			image:""
+			minSize: "200px",
+			size: "100%",
+			custom: customElement,
+			image: ""
 		});
 		$.ajax({
 			url: 'newSched.php',
 			type: 'GET',
-			data: {"i":getParameterByName("i")},
+			data: {"i": getParameterByName("i")},
 			dataType: 'html',
-			timeout: (count*1000)+5000,
+			timeout: (count * 1000) + 5000,
 			cache: false,
-			success: function(data) {
+			success: function (data){
 				$('#results').html(data);
 				$("#results").LoadingOverlay("hide");
 				clearInterval(interval);
 			},
-			error: function(e) {
+			error: function (e){
 				console.log(e);
 				clearInterval(interval);
 				if(e.status === 404 || e.status === 500 || e.statusText === "timeout"){
