--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -7,7 +7,7 @@ mixin course-basket(myCourse)
 
 extends template.pug
 block after_head
-    script(src="public/js/homepageFunctions.min.js")
+    script(src="public/js/#{homepageJS}")
     script.
         if (location.hostname !== "localhost" && location.hostname !== "127.0.0.1") {
             (function (i, s, o, g, r, a, m) {
